--- a/packages/mobx-loro/package.json
+++ b/packages/mobx-loro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seanchas116/mobx-loro",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "MobX bindings for Loro CRDT",
   "homepage": "https://github.com/seanchas116/mobx-loro#readme",
   "bugs": {
@@ -16,7 +16,8 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "dev": "tsup --watch",
@@ -24,6 +25,7 @@
     "test": "vitest run",
     "build": "tsc --noEmit && tsup",
     "prepare": "npm run build",
+    "prepublishOnly": "cp ../../README.md ./README.md",
     "format": "prettier --write ."
   },
   "devDependencies": {
